@@ -38,7 +38,6 @@ Gataxx:
 Glines:
         - Configure the playing field size and ball number (bug
           83532).
-        - Remember the window size.
 
 Gnect:
         - Graphics (could we share some with iagno/gataxx)
